# neural_snake

./: .gitignore  CMakeLists.txt  config_sample.cmake  create_project.bat  functions.cmake  neural_snake.sln
cute_snake_gui/: board_model.cpp  board_model.h  cute_snake_gui.vcxproj  cute_snake_gui.vcxproj.filters  main.cpp  main_window.qml  qt_controller.cpp  qt_controller.h  qt_renderer.cpp  qt_renderer.h
cute_snake_gui/GeneratedFiles/: main_window_qml.cpp  qmlcache_loader.cpp
dependencies/: CMakeLists.txt
dependencies/catch/: CMakeLists.txt
dependencies/qt/: CMakeLists.txt
neural_snake/: board.cpp  board.h  console_input.cpp  console_renderer.cpp  controller.h  direction.h  main.cpp  neural_snake.cpp  neural_snake.vcxproj  neural_snake.vcxproj.filters  position.h  renderer.h  simulation.cpp  simulation.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h  tile_content.h
snake_brain/: Matrix.cpp  Matrix.h  Utility.cpp  Utility.h  ai_controller.cpp  ai_controller.h  ai_feedback.cpp  ai_feedback.h  cnn.cpp  cnn.h  linear_algebra.cpp  linear_algebra.h  network.cpp  network.h  neuron.h  neuron.hpp  ranges.hpp  sample.hpp  snake_brain.cpp  snake_brain.h  snake_brain.vcxproj  snake_brain.vcxproj.filters
snake_console/: console_input.h  console_renderer.h  snake_console.vcxproj  snake_console.vcxproj.filters
source/: CMakeLists.txt
source/ai/dumb_deterministic/: CMakeLists.txt
source/ai/dumb_deterministic/include/: dumb_controller.hpp  dumb_nn_ai.hpp
source/ai/dumb_deterministic/src/: dumb_controller.cpp  dumb_nn_ai.cpp
source/cute_snake_gui/: CMakeLists.txt  target_sources.cmake
source/cute_snake_gui/qml/: main_window.qml
source/cute_snake_gui/src/: board_model.cpp  board_model.h  main.cpp  qt_controller.cpp  qt_controller.h  qt_renderer.cpp  qt_renderer.h
source/neural_network_lib/: CMakeLists.txt
source/neural_network_lib/include/: back_propagation_trainer.hpp  functions.hpp  layer.hpp  math.hpp  network.hpp  network_trainer.hpp
source/neural_network_lib/src/: back_propagation_trainer.cpp  functions.cpp  layer.cpp  network_trainer.cpp  neuron.cpp
source/neural_snake/: CMakeLists.txt
source/neural_snake/include/: board.h  controller.h  direction.h  position.h  renderer.h  simulation.h  snake.h  snake_game.h  tile_content.h
source/neural_snake/src/: board.cpp  simulation.cpp  snake.cpp  snake_game.cpp
source/snake_brain/: CMakeLists.txt
source/snake_brain/include/: ai_controller.h  ai_feedback.h  back_propagation_trainer.hpp  functions.hpp  layer.hpp  math.hpp  network.hpp  network_trainer.hpp  neuron.hpp  ranges.hpp  sample.hpp  snake_brain.h
source/snake_brain/src/: ai_controller.cpp  ai_feedback.cpp  back_propagation_trainer.cpp  functions.cpp  layer.cpp  network.cpp  network_trainer.cpp  neuron.cpp  snake_brain.cpp
source/snake_console/: CMakeLists.txt
source/snake_console/src/: console_input.cpp  console_input.h  console_renderer.cpp  console_renderer.h  main.cpp
